--- a/themes/ssarcandy/source/css/_partial/highlight.less
+++ b/themes/ssarcandy/source/css/_partial/highlight.less
@@ -24,7 +24,9 @@
 }
 
 .line-numbers() {
-    color: @secondaryTextColor;
+    // Line numbers sit on the dark code background (@h-background), where
+    // @secondaryTextColor is only 2.9:1. This lighter grey clears WCAG AA (4.5:1).
+    color: #969696;
     font-size: 0.85em;
 }
 
